[package]
name = "comic"
version = "0.1.0"
authors = ["Jovansonlee B. Cesar <ivanceras@gmail.com>"]
description = "Beautify emojis and bob diagrams"
license = "MIT"
documentation = "https://docs.rs/comic"
keywords = ["comics", "emoji", "bob", "svg", "speech", "balloon"]

[dependencies]
svg = "0.5"
svgbob = "0.1"
domafic = "0.1"
memenhancer = "0.1"
